--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -147,7 +147,7 @@ objects:
                     path: ${CONFIG_FILE_NAME}
           containers:
             - name: ${PREFIX}${NAME}
-              image: ''
+              image: ""
               ports: []
               env:
                 - name: BACKUP_STRATEGY
@@ -200,6 +200,16 @@ objects:
                     secretKeyRef:
                       name: ${PREFIX}${PRIME_WALLET_DB_HOST}
                       key: ${DB_PASSWORD_KEY_NAME}
+                - name: WALLET_HEALTH_GATEWAY_USER
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${PREFIX}${HEALTH_GATEWAY_WALLET_DB_HOST}
+                      key: ${DB_USER_KEY_NAME}
+                - name: WALLET_HEALTH_GATEWAY_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: ${PREFIX}${HEALTH_GATEWAY_WALLET_DB_HOST}
+                      key: ${DB_PASSWORD_KEY_NAME}
                 - name: WEBHOOK_URL
                   valueFrom:
                     secretKeyRef:
@@ -236,7 +246,7 @@ parameters:
     displayName: Prefix
     description: A name prefix used for all objects
     required: false
-    value: ''
+    value: ""
   - name: APP_NAME
     displayName: App Name
     description: Used to group components together in the OpenShift console.
@@ -266,10 +276,11 @@ parameters:
     value: backup
   - name: IMAGE_NAMESPACE
     displayName: Image Namespace
-    description: The namespace of the OpenShift project containing the imagestream
+    description:
+      The namespace of the OpenShift project containing the imagestream
       for the application.
     required: true
-    value: ''
+    value: ""
   - name: TAG_NAME
     displayName: Environment TAG name
     description: The TAG name for this environment, e.g., dev, test, prod
@@ -277,37 +288,50 @@ parameters:
     value: dev
   - name: VC_AUTHN_DB_HOST
     displayName: Database Deployment Name
-    description: The name associated to the database deployment resources.  In particular,
+    description:
+      The name associated to the database deployment resources.  In particular,
       this is used to wire up the credentials associated to the database.
     required: true
     value: vc-authn-database
   - name: VC_AUTHN_WALLET_DB_HOST
     displayName: Wallet Database Hostname
-    description: The name associated to the wallet database deployment resources.  In
+    description:
+      The name associated to the wallet database deployment resources.  In
       particular, this is used to wire up the credentials associated to the database.
     required: true
     value: vc-authn-wallet
   - name: LSBC_WALLET_DB_HOST
     displayName: Wallet Database Hostname
-    description: The name associated to the wallet database deployment resources.  In
+    description:
+      The name associated to the wallet database deployment resources.  In
       particular, this is used to wire up the credentials associated to the database.
     required: true
     value: wallet-lsbc
   - name: PRIME_WALLET_DB_HOST
     displayName: Wallet Database Hostname
-    description: The name associated to the wallet database deployment resources.  In
+    description:
+      The name associated to the wallet database deployment resources.  In
       particular, this is used to wire up the credentials associated to the database.
     required: true
     value: wallet-prime
+  - name: HEALTH_GATEWAY_WALLET_DB_HOST
+    displayName: Wallet Database Hostname
+    description:
+      The name associated to the wallet database deployment resources.  In
+      particular, this is used to wire up the credentials associated to the database.
+    required: true
+    value: wallet-health-gateway
   - name: DB_USER_KEY_NAME
     displayName: Database User Key Name
-    description: The datbase user key name stoed in database deployment resources
+    description:
+      The datbase user key name stoed in database deployment resources
       specified by VC_AUTHN_DB_HOST_NAME.
     required: true
     value: database-user
   - name: DB_PASSWORD_KEY_NAME
     displayName: Database Password Key Name
-    description: The database password key name stored in database deployment resources
+    description:
+      The database password key name stored in database deployment resources
       specified by VC_AUTHN_DB_HOST_NAME.
     required: true
     value: database-password
@@ -318,54 +342,62 @@ parameters:
     value: rolling
   - name: WEBHOOK_URL
     displayName: Webhook URL
-    description: The URL of the webhook to use for notifications.  If not specified,
+    description:
+      The URL of the webhook to use for notifications.  If not specified,
       the webhook integration feature is disabled.
     required: false
-    value: ''
+    value: ""
   - name: ENVIRONMENT_FRIENDLY_NAME
     displayName: Friendly Environment Name
-    description: The human readable name of the environment.  This variable is used
+    description:
+      The human readable name of the environment.  This variable is used
       by the webhook integration to identify the environment in which the backup notifications
       originate.
     required: false
-    value: ''
+    value: ""
   - name: ENVIRONMENT_NAME
     displayName: Environment Name (Environment Id)
-    description: The name or Id of the environment.  This variable is used by the
+    description:
+      The name or Id of the environment.  This variable is used by the
       webhook integration to identify the environment in which the backup notifications
       originate.
     required: false
-    value: ''
+    value: ""
   - name: BACKUP_DIR
     displayName: The root backup directory
-    description: The name of the root backup directory.  The backup volume will be
+    description:
+      The name of the root backup directory.  The backup volume will be
       mounted to this directory.
     required: true
     value: /backups/
   - name: DAILY_BACKUPS
     displayName: Number of Daily Backups to Retain
-    description: The number of daily backup files to be retained.  Used for the `rolling`
+    description:
+      The number of daily backup files to be retained.  Used for the `rolling`
       backup strategy.
     required: false
-    value: ''
+    value: ""
   - name: WEEKLY_BACKUPS
     displayName: Number of Weekly Backups to Retain
-    description: The number of weekly backup files to be retained.  Used for the `rolling`
+    description:
+      The number of weekly backup files to be retained.  Used for the `rolling`
       backup strategy.
     required: false
-    value: ''
+    value: ""
   - name: MONTHLY_BACKUPS
     displayName: Number of Monthly Backups to Retain
-    description: The number of monthly backup files to be retained.  Used for the
+    description:
+      The number of monthly backup files to be retained.  Used for the
       `rolling` backup strategy.
     required: false
-    value: ''
+    value: ""
   - name: DATABASE_SERVER_TIMEOUT
     displayName: Database Server Timeout
-    description: The timeout, in seconds, to wait for the local database server to
+    description:
+      The timeout, in seconds, to wait for the local database server to
       startup during a verification.
     required: true
-    value: '120'
+    value: "120"
   - name: CONFIG_FILE_NAME
     displayName: Config File Name
     description: The name of the configuration file.
@@ -383,7 +415,8 @@ parameters:
     value: /
   - name: BACKUP_VOLUME_NAME
     displayName: Backup Volume Name
-    description: The name of the persistent volume used to store the backups.  Please
+    description:
+      The name of the persistent volume used to store the backups.  Please
       note, when using the recommended nfs-backup storage class the name of the pvc
       MUST be taken from the manually provisioned claim; nfs-backup storage MUST be
       provisioned manually.
@@ -391,14 +424,16 @@ parameters:
     value: backup
   - name: BACKUP_VOLUME_SIZE
     displayName: Backup Volume Size
-    description: The size of the persistent volume used to store the backups, e.g.
+    description:
+      The size of the persistent volume used to store the backups, e.g.
       512Mi, 1Gi, 2Gi.  Ensure this is sized correctly.  Refer to the container documentation
       for details.
     required: true
     value: 20Gi
   - name: BACKUP_VOLUME_CLASS
     displayName: Backup Volume Class
-    description: The class of the persistent volume used to store the backups; gluster-file,
+    description:
+      The class of the persistent volume used to store the backups; gluster-file,
       gluster-block, gluster-file-db, netapp-file-standard, netapp-block-standard,
       nfs-backup.  Please note, nfs-backup storage is the recommended storage type
       for backups.  It MUST be provisioned manually through the OCP catalog via the
@@ -408,7 +443,8 @@ parameters:
     value: nfs-backup
   - name: VERIFICATION_VOLUME_NAME
     displayName: Verification Volume Name
-    description: The name for the verification volume, used for restoring and verifying
+    description:
+      The name for the verification volume, used for restoring and verifying
       backups.  When using the recommend nfs-backup storage class for backups, this
       volume MUST be one of gluster-file-db, gluster-block, netapp-file-standard,
       or netapp-block-standard storage; gluster-block or netapp-block-standard are
@@ -417,14 +453,16 @@ parameters:
     value: backup-verification
   - name: VERIFICATION_VOLUME_SIZE
     displayName: Backup Volume Size
-    description: The size of the persistent volume used for restoring and verifying
+    description:
+      The size of the persistent volume used for restoring and verifying
       backups, e.g. 512Mi, 1Gi, 2Gi.  Ensure this is sized correctly.  It should be
       large enough to contain your largest database.
     required: true
     value: 5Gi
   - name: VERIFICATION_VOLUME_CLASS
     displayName: Backup Volume Class
-    description: The class of the persistent volume used for restoring and verifying
+    description:
+      The class of the persistent volume used for restoring and verifying
       backups; should be one of gluster-block, gluster-file-db, netapp-file-standard,
       or netapp-block-standard; gluster-block or netapp-block-standard are recommended
       for LARGE databases (as they have far better performance).
@@ -432,7 +470,8 @@ parameters:
     value: netapp-file-standard
   - name: VERIFICATION_VOLUME_MOUNT_PATH
     displayName: Verification Volume Mount Path
-    description: The path on which to mount the verification volume.  This is used
+    description:
+      The path on which to mount the verification volume.  This is used
       by the database server to contain the database configuration and data files.
     required: true
     value: /var/lib/pgsql/data
@@ -440,12 +479,12 @@ parameters:
     displayName: Resources CPU Request
     description: The resources CPU request (in cores) for this build.
     required: true
-    value: '0'
+    value: "0"
   - name: CPU_LIMIT
     displayName: Resources CPU Limit
     description: The resources CPU limit (in cores) for this build.
     required: true
-    value: '0'
+    value: "0"
   - name: MEMORY_REQUEST
     displayName: Resources Memory Request
     description: The resources Memory request (in Mi, Gi, etc) for this build.
