--- a/openshift/templates/backup/config/backup.conf
+++ b/openshift/templates/backup/config/backup.conf
@@ -50,6 +50,7 @@ postgres=vc-authn-database/vc_authn
 postgres=wallet-lsbc/agent_lsbc_wallet
 postgres=wallet-prime/agent_prime_wallet
 postgres=wallet-prime/agent_sandbox_prime_wallet
+postgres=wallet-health-gateway/agent_health_gateway_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
